--- a/src/app/pages/signup/signup.component.html
+++ b/src/app/pages/signup/signup.component.html
@@ -33,12 +33,12 @@
                   <div class="select is-fullwidth">
                     <select class="input" name="deficiency" id="deficiency" [(ngModel)]="register.deficiency">
                       <option value="">Selecione...</option>
-                      <option value="physical">Física</option>
-                      <option value="hearing">Auditiva</option>
-                      <option value="visual">Visual</option>
-                      <option value="intellectual">Intelectual</option>
-                      <option value="multiple">Múltipla</option>
-                      <option value="none">Nenhuma</option>
+                      <option value="Física">Física</option>
+                      <option value="Auditiva">Auditiva</option>
+                      <option value="Visual">Visual</option>
+                      <option value="Intelectual">Intelectual</option>
+                      <option value="Múltipla">Múltipla</option>
+                      <option value="Nenhuma">Nenhuma</option>
                     </select>
                   </div>
                 </div>
