fix: 401 redirect, feat: user name on review

--- a/src/app/pages/admin/admin-ratings/admin-ratings.component.html
+++ b/src/app/pages/admin/admin-ratings/admin-ratings.component.html
@@ -74,7 +74,7 @@
                   </ul>
                 </div>
               </div>
-              <!-- <small>Avaliação por {{ rating.usuario }}</small> -->
+              <small>Avaliação por {{ rating.user.name }}</small>
             </div>
             <footer class="card-footer">
               <a [routerLink]="'/estabelecimentos/' + rating.establishment" class="card-footer-item">
