--- a/src/app/pages/place/place.component.html
+++ b/src/app/pages/place/place.component.html
@@ -93,7 +93,7 @@
                   <b>{{ a.name }}: </b>{{ a.review }}
                 </li>
               </ul>
-              <!-- <small>Avaliação por {{ rating.usuario }}</small> -->
+              <small>Avaliação por {{ rating.user.name }}</small>
             </div>
           </div>
           <br>
