--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -77,7 +77,7 @@
     <p>
       OSC Conexão Solidária - CNPJ 24.236.775/0001-29
       <br>
-      <a href="mailto:cs@rsconexaosolidaria.org">cs@rsconexaosolidaria.org</a>
+      <a href="mailto:sembarreiras.plat@gmail.com">sembarreiras.plat@gmail.com</a>
     </p>
     <hr>
     <p>Desenvolvido por <a href="https://unze.com.br" rel="nofollow" target="_blank">Unze</a></p>
