fix: make cnpj and phone optional

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -59,9 +59,9 @@
             </a>
           </div>
           <div class="buttons" *ngIf="!userIsLogged">
-            <a routerLink="/cadastrar" routerLinkActive="is-active" class="button is-primary" tabindex="0">
+            <!-- <a routerLink="/cadastrar" routerLinkActive="is-active" class="button is-primary" tabindex="0">
               <strong>Cadastrar</strong>
-            </a>
+            </a> -->
             <a routerLink="/entrar" routerLinkActive="is-active" class="button is-primary is-outlined" [class]="{ 'is-inverted': navbarIsTransparent }" tabindex="0">
               Entrar
             </a>
