--- a/src/app/pages/new-place/new-place.component.html
+++ b/src/app/pages/new-place/new-place.component.html
@@ -54,14 +54,13 @@
               </div>
               <div class="column is-4">
                 <div class="field">
-                  <label for="cnpj">CNPJ</label>
+                  <label for="cnpj">CNPJ <small>(opcional)</small></label>
                   <div class="control">
                     <input
                       type="text"
                       class="input"
                       name="cnpj"
                       id="cnpj"
-                      required
                       [(ngModel)]="place.cnpj">
                   </div>
                 </div>
