--- a/src/app/pages/signup/signup.component.html
+++ b/src/app/pages/signup/signup.component.html
@@ -22,9 +22,9 @@
                 </div>
               </div>
               <div class="field">
-                <label for="phone">Celular</label>
+                <label for="phone">Celular <small>(opcional)</small></label>
                 <div class="control">
-                  <input type="tel" class="input" name="phone" id="phone" required [(ngModel)]="register.phone">
+                  <input type="tel" class="input" name="phone" id="phone" [(ngModel)]="register.phone">
                 </div>
               </div>
               <div class="field">
