--- a/src/app/pages/admin/admin-ratings/admin-ratings.component.html
+++ b/src/app/pages/admin/admin-ratings/admin-ratings.component.html
@@ -48,11 +48,11 @@
                   {{ rating.status == 'approved' ? 'Aprovada' : 'Pendente' }}
                 </span>
               </p>
-              
+
               <h3 class="title is-5 mb-3 mt-3">{{ rating.title }}</h3>
-              
+
               <bar-rating [(rate)]="rating.rating" [theme]="'stars'" [readOnly]="true"></bar-rating>
-              
+
               <label><b>Comentário:</b></label><br>
               <p>{{ rating.comment }}</p>
               <br>
@@ -130,11 +130,11 @@
       </button>
       <ul class="pagination-list">
         <li>
-          <a class="pagination-link is-current"
+          <button class="pagination-link is-current"
             [attr.aria-label]="'Página ' + ((pagination.offset + this.pagination.limit) / this.pagination.limit)"
             aria-current="página">
             Página {{ (pagination.offset + this.pagination.limit) / this.pagination.limit }}
-          </a>
+        </button>
         </li>
       </ul>
     </nav>
