--- a/src/app/pages/places/places.component.html
+++ b/src/app/pages/places/places.component.html
@@ -126,7 +126,7 @@
                   <span>estacionamento</span>
                 </span>
                 <span class="tag" *ngIf="checkIfAccessibiltyExists(place, 'entrada_facilitada')">
-                  <span class="icon">    
+                  <span class="icon">
                     <i class="fas fa-door-open"></i>
                   </span>
                   <span>entrada facilitada</span>
@@ -209,11 +209,11 @@
       </button>
       <ul class="pagination-list">
         <li>
-          <a class="pagination-link is-current"
+          <button class="pagination-link is-current"
             [attr.aria-label]="'Página ' + ((pagination.offset + this.pagination.limit) / this.pagination.limit)"
             aria-current="página">
             Página {{ (pagination.offset + this.pagination.limit) / this.pagination.limit }}
-          </a>
+        </button>
         </li>
       </ul>
     </nav>
