--- a/src/app/pages/places/places.component.html
+++ b/src/app/pages/places/places.component.html
@@ -87,15 +87,17 @@
         <div class="column is-3">
           <div class="field">
             <label for="city">Cidade</label>
-            <ng-select class="custom" [items]="cities | async"
-              [virtualScroll]="true"
-              bindLabel="nome"
-              bindValue="nome"
-              id="city"
-              [(ngModel)]="filter.city">
-            </ng-select>
+            <div class="control select">
+              <select [(ngModel)]="filter.city" class="input" name="city" id="city">
+                <option value="">Selecione...</option>
+                <option *ngFor="let city of cities | async" value="{{city.nome}}">
+                  {{ city.nome }}
+                </option>
+              </select>
+            </div>
           </div>
         </div>
+
         <div class="column is-12">
           <div class="buttons is-right">
             <button class="button is-light" type="button" (click)="cleanFiltersAndSearch()">
@@ -126,7 +128,7 @@
                   <span>estacionamento</span>
                 </span>
                 <span class="tag" *ngIf="checkIfAccessibiltyExists(place, 'entrada_facilitada')">
-                  <span class="icon">    
+                  <span class="icon">
                     <i class="fas fa-door-open"></i>
                   </span>
                   <span>entrada facilitada</span>
@@ -209,11 +211,11 @@
       </button>
       <ul class="pagination-list">
         <li>
-          <a class="pagination-link is-current"
+          <button class="pagination-link is-current"
             [attr.aria-label]="'Página ' + ((pagination.offset + this.pagination.limit) / this.pagination.limit)"
             aria-current="página">
             Página {{ (pagination.offset + this.pagination.limit) / this.pagination.limit }}
-          </a>
+        </button>
         </li>
       </ul>
     </nav>
