Added new types

--- a/src/app/pages/admin/admin-places/admin-places.component.html
+++ b/src/app/pages/admin/admin-places/admin-places.component.html
@@ -54,6 +54,10 @@
                   <option value="Clínica">Clínica</option>
                   <option value="Hospital">Hospital</option>
                   <option value="Farmácia">Farmácia</option>
+                  <option value="Shopping">Shopping</option>
+                  <option value="Aeroporto">Aeroporto</option>
+                  <option value="Rodoviária">Rodoviária</option>
+                  <option value="Terminal Hidroviário">Terminal Hidroviário</option>
                 </select>
               </div>
             </div>
