getAddress by CEP

--- a/src/app/pages/new-place/new-place.component.html
+++ b/src/app/pages/new-place/new-place.component.html
@@ -168,25 +168,58 @@
               <div class="control">
                 <input
                   type="tel"
+                  (change)="getAddress()"
                   class="input"
                   name="zipcode"
                   id="zipcode"
                   required
+                  maxlength="8"
                   [(ngModel)]="place.address.zipCode">
               </div>
             </div>
           </div>
+
           <div class="column is-2">
             <div class="field">
               <label for="state">Estado</label>
-              <div class="control">
-                <input
-                  type="text"
+              <div class="control select">
+                <select
+                  (change)="getCities()"
+                  [(ngModel)]="place.address.state"
                   class="input"
                   name="state"
-                  id="state"
                   required
-                  [(ngModel)]="place.address.state">
+                  id="state">
+                  <option value="">Selecione...</option>
+                  <option value="AC">Acre</option>
+                  <option value="AL">Alagoas</option>
+                  <option value="AP">Amapá</option>
+                  <option value="AM">Amazonas</option>
+                  <option value="BA">Bahia</option>
+                  <option value="CE">Ceará</option>
+                  <option value="DF">Distrito Federal</option>
+                  <option value="ES">Espírito Santo</option>
+                  <option value="GO">Goiás</option>
+                  <option value="MA">Maranhão</option>
+                  <option value="MT">Mato Grosso</option>
+                  <option value="MS">Mato Grosso do Sul</option>
+                  <option value="MG">Minas Gerais</option>
+                  <option value="PA">Pará</option>
+                  <option value="PB">Paraíba</option>
+                  <option value="PR">Paraná</option>
+                  <option value="PE">Pernambuco</option>
+                  <option value="PI">Piauí</option>
+                  <option value="RJ">Rio de Janeiro</option>
+                  <option value="RN">Rio Grande do Norte</option>
+                  <option value="RS">Rio Grande do Sul</option>
+                  <option value="RO">Rondônia</option>
+                  <option value="RR">Roraima</option>
+                  <option value="SC">Santa Catarina</option>
+                  <option value="SP">São Paulo</option>
+                  <option value="SE">Sergipe</option>
+                  <option value="TO">Tocantins</option>
+                  <option value="EX">Estrangeiro</option>
+                </select>
               </div>
             </div>
           </div>
