Added type "Prédio Público"

--- a/src/app/pages/admin/admin-places/admin-places.component.html
+++ b/src/app/pages/admin/admin-places/admin-places.component.html
@@ -58,6 +58,7 @@
                   <option value="Aeroporto">Aeroporto</option>
                   <option value="Rodoviária">Rodoviária</option>
                   <option value="Terminal Hidroviário">Terminal Hidroviário</option>
+                  <option value="Prédio Público">Prédio Público</option>
                 </select>
               </div>
             </div>
