--- a/src/app/pages/new-place/new-place.component.html
+++ b/src/app/pages/new-place/new-place.component.html
@@ -52,6 +52,7 @@
                       <option value="Aeroporto">Aeroporto</option>
                       <option value="Rodoviária">Rodoviária</option>
                       <option value="Terminal Hidroviário">Terminal Hidroviário</option>
+                      <option value="Prédio Público">Prédio Público</option>
                     </select>
                   </div>
                 </div>
