--- a/src/app/pages/new-rating/new-rating.component.html
+++ b/src/app/pages/new-rating/new-rating.component.html
@@ -1,5 +1,5 @@
 <ng-container *ngIf="place">
-  <section class="hero is-primary is-medium place-hero" [style]="{ 'background-image': place.pictureUrl ? 'linear-gradient(180deg, rgba(0,0,0,1) 0%, rgba(0,0,0,0.6) 50%, rgba(0,0,0,0.1) 100%), url(' + place.pictureUrl + ')' : '' }">
+  <section class="hero is-primary is-medium place-hero" [style]="{ 'background-image': place.pictureUrl ? 'url(' + place.pictureUrl + ')' : '' }">
     <div class="hero-body">
       <div class="container">
         <h1 class="title is-1">{{ place.title }}</h1>
