--- a/src/app/pages/place/place.component.html
+++ b/src/app/pages/place/place.component.html
@@ -1,17 +1,21 @@
 <ng-container *ngIf="place">
-  <section class="hero is-primary is-medium place-hero" [style]="{ 'background-image': place.pictureUrl ? 'linear-gradient(180deg, rgba(0,0,0,1) 0%, rgba(0,0,0,0.6) 50%, rgba(0,0,0,0.1) 100%), url(' + place.pictureUrl + ')' : '' }">
+  <section class="hero is-primary is-medium place-hero" [style]="{ 'background-image': place.pictureUrl ? 'url(' + place.pictureUrl + ')' : '' }">
     <div class="hero-body">
-      <div class="container">
-        <h1 class="title is-1">{{ place.title }}</h1>
-        <p class="subtitle mb-0">{{ place.type }}</p>
-        <bar-rating [(rate)]="place.rating" theme="stars" [readOnly]="true"></bar-rating>
-      </div>
     </div>
   </section>
   <section class="section">
     <div class="container">
+      <h1 class="title is-1">{{ place.title }}</h1>
+      <p class="subtitle mb-0">{{ place.type }}</p>
+      <bar-rating [(rate)]="place.rating" theme="stars" [readOnly]="true"></bar-rating>
+      <hr>
       <div class="columns">
         <div class="column">
+          <div class="box" *ngIf="place.phone.length > 0 || place.link.length > 0">
+            <h3 class="title is-5 mb-3">Informações</h3>
+            <p *ngIf="place.phone">Telefone: {{ place.phone }}</p>
+            <p *ngIf="place.link">Site: <a [href]="place.link" target="_blank">{{ place.link }}</a></p>
+          </div>
           <div class="box" *ngIf="place.accessibilities.length > 0">
             <h3 class="title is-5 mb-3">Accessibilidades</h3>
             <div class="tags">
