Added type "Diversão"

--- a/src/app/pages/places/places.component.html
+++ b/src/app/pages/places/places.component.html
@@ -24,25 +24,27 @@
             <div class="control select">
               <select [(ngModel)]="filter.type" class="input" name="type" id="type">
                 <option value="">Selecione...</option>
-                <option value="Restaurante">Restaurante</option>
                 <option value="Academia">Academia</option>
-                <option value="Mercado">Mercado</option>
-                <option value="Super Mercado">Super Mercado</option>
-                <option value="Salão de Beleza">Salão de Beleza</option>
+                <option value="Aeroporto">Aeroporto</option>
                 <option value="Banco">Banco</option>
-                <option value="Loja">Loja</option>
+                <option value="Clínica">Clínica</option>
+                <option value="Diversão">Diversão</option>
                 <option value="Escola">Escola</option>
                 <option value="Faculdade">Faculdade</option>
-                <option value="Hotel">Hotel</option>
-                <option value="Motel">Motel</option>
-                <option value="Clínica">Clínica</option>
-                <option value="Hospital">Hospital</option>
                 <option value="Farmácia">Farmácia</option>
-                <option value="Shopping">Shopping</option>
-                <option value="Aeroporto">Aeroporto</option>
-                <option value="Rodoviária">Rodoviária</option>
-                <option value="Terminal Hidroviário">Terminal Hidroviário</option>
+                <option value="Hospital">Hospital</option>
+                <option value="Hotel">Hotel</option>
+                <option value="Loja">Loja</option>
+                <option value="Mercado">Mercado</option>
+                <option value="Motel">Motel</option>
                 <option value="Prédio Público">Prédio Público</option>
+                <option value="Restaurante">Restaurante</option>
+                <option value="Rodoviária">Rodoviária</option>
+                <option value="Salão de Beleza">Salão de Beleza</option>
+                <option value="Shopping">Shopping</option>
+                <option value="Super Mercado">Super Mercado</option>
+                <option value="Terminal Hidroviário">Terminal Hidroviário</option>
+                <option value="Outros">Outros</option>
               </select>
             </div>
           </div>
