--- a/src/app/pages/new-place/new-place.component.html
+++ b/src/app/pages/new-place/new-place.component.html
@@ -157,6 +157,12 @@
             </div>
             <div class="field">
               <label class="checkbox">
+                <input type="checkbox" [(ngModel)]="accessibilities.site_acessivel" name="site_acessivel">
+                Site acessível
+              </label>
+            </div>
+            <div class="field">
+              <label class="checkbox">
                 <input type="checkbox" [(ngModel)]="accessibilities.pap" name="pap">
                 Posicionamento atitudinal positivo
               </label>
