botao avaliar comentado

--- a/src/app/pages/places/places.component.html
+++ b/src/app/pages/places/places.component.html
@@ -179,7 +179,7 @@
                   {{ place.address.street }} {{ place.address.number }}{{ place.address.complement ? ', ' + place.address.complement : '' }}
                 </address>
               </div>
-              <footer class="card-footer">
+              <!-- <footer class="card-footer">
                 <a [routerLink]="'/estabelecimentos/' + place.id + '/avaliar'" class="card-footer-item">
                   <span class="icon">
                     <i class="fas fa-star"></i>
@@ -188,7 +188,7 @@
                     <b>Avaliar</b>
                   </span>
                 </a>
-              </footer>
+              </footer> -->
             </div>
           </a>
         </div>
