add placeholder no campo de comentarios

--- a/src/app/pages/new-rating/new-rating.component.html
+++ b/src/app/pages/new-rating/new-rating.component.html
@@ -51,7 +51,7 @@
                 <label for="comment">Comentário</label>
                 <div class="control">
                   <textarea class="textarea" name="comment" id="comment" rows="2"
-                  required
+                  required placeholder="Pontos positivos e Pontos negativos..."
                   [(ngModel)]="rating.comment"></textarea>
                 </div>
               </div>
