--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -10,6 +10,13 @@
   }
 }
 
+.center{
+  display: flex;
+  justify-content: center;
+  left: 72px;
+  width: 100%;
+}
+
 .navbar-burger {
   background: transparent;
   border: none;
