--- a/src/app/pages/new-place/new-place.component.html
+++ b/src/app/pages/new-place/new-place.component.html
@@ -301,6 +301,20 @@
               </div>
             </div>
           </div>
+           <div class="column is-3">
+            <div class="field">
+              <label for="descricao">Descrição </label>
+              <div class="control">
+                <input
+                  type="text"
+                  class="input"
+                  name="descricao"
+                  id="descricao"
+                  required
+                  [(ngModel)]="place.address.descricao">
+              </div>
+            </div>
+          </div> 
         </div>
         <br>
         <div class="field">
