--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -75,6 +75,24 @@
 <router-outlet></router-outlet>
 <footer class="footer has-text-centered">
   <div class="container">
+    <div class="center">
+      <p>
+       Apoiadores: 
+       <span class="navbar-item pl-0 no-focus" tabindex="-1">
+       <span>&nbsp;</span>
+       <span>&nbsp;</span>
+       <img src="../assets/img/onu.png" alt="Onu">
+       <span>&nbsp;</span>
+       <span>&nbsp;</span>
+       <img src="../assets/img/zaffari-logo.jpg" alt="zaffari">
+       <span>&nbsp;</span>
+       <span>&nbsp;</span>
+       <img src="../assets/img/pucrs.png" alt="Logo PUCRS">
+       <span>&nbsp;</span>
+       <span>&nbsp;</span>
+       </span>
+      </p>
+      </div>
     <p>
       OSC Conexão Solidária - CNPJ 24.236.775/0001-29
       <br>
