--- a/src/app/pages/new-place/new-place.component.html
+++ b/src/app/pages/new-place/new-place.component.html
@@ -302,6 +302,20 @@
             </div>
           </div>
         </div>
+        <div class="column is-3">
+          <div class="field">
+            <label for="descricao">Descrição </label>
+            <div class="control">
+              <input
+                type="text"
+                class="input"
+                name="descricao"
+                id="descricao"
+                required
+                [(ngModel)]="place.address.descricao">
+            </div>
+          </div>
+        </div> 
         <br>
         <div class="field">
           <button type="submit" class="button is-fullwidth is-primary">Cadastrar</button>
