--- a/src/app/pages/places/places.component.html
+++ b/src/app/pages/places/places.component.html
@@ -176,6 +176,7 @@
                   CEP {{ place.address.zipCode }}<br>
                   {{ place.address.city }}, {{ place.address.state }}<br>
                   Bairro {{ place.address.neighborhood }}<br>
+                  Descrição: {{place.address.descricao}}<br>
                   {{ place.address.street }} {{ place.address.number }}{{ place.address.complement ? ', ' + place.address.complement : '' }}
                 </address>
               </div>
