--- a/src/app/pages/new-rating/new-rating.component.scss
+++ b/src/app/pages/new-rating/new-rating.component.scss
@@ -1,3 +1,16 @@
 input[type="radio"] {
   margin-right: 5px;
 }
+
+.title {
+  font-weight: bold;
+  color: black;
+}
+
+.title.is-1 {
+  text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
+}
+
+.subtitle {
+  text-shadow: -1px -1px 0 #000, 1px -1px 0 #000, -1px 1px 0 #000, 1px 1px 0 #000;
+}
