--- a/src/app/pages/admin/admin-ratings/admin-ratings.component.html
+++ b/src/app/pages/admin/admin-ratings/admin-ratings.component.html
@@ -40,7 +40,7 @@
     <p *ngIf="ratings.length === 0" class="has-text-grey has-text-centered">Não encontramos nenhum resultado.</p>
     <div *ngIf="ratings.length > 0">
       <div class="columns is-multiline">
-        <div class="column is-12" *ngFor="let rating of ratings; let index = index">
+        <div class="column is-6" *ngFor="let rating of ratings; let index = index">
           <div class="card rating-card">
             <div class="card-content">
               <p>
@@ -123,36 +123,55 @@
       </div>
     </div>
     <br><br>
-    <nav class="pagination is-centered" role="navigation" aria-label="paginação">
-      <button class="pagination-previous"
-        (click)="this.pagination.offset = pagination.offset - this.pagination.limit; getRatings()"
-        [disabled]="pagination.offset === 0">
-        <span class="icon">
-          <i class="fas fa-chevron-left"></i>
-        </span>
-        <span>
-          Anterior
-        </span>
-      </button>
-      <button class="pagination-next"
-        (click)="this.pagination.offset = pagination.offset + this.pagination.limit; getRatings()"
-        [disabled]="pagination.total <= pagination.offset + this.pagination.limit">
-        <span>
-          Próxima
-        </span>
-        <span class="icon">
-          <i class="fas fa-chevron-right"></i>
-        </span>
-      </button>
-      <ul class="pagination-list">
-        <li>
-          <button class="pagination-link is-current"
-            [attr.aria-label]="'Página ' + ((pagination.offset + this.pagination.limit) / this.pagination.limit)"
-            aria-current="página">
-            Página {{ (pagination.offset + this.pagination.limit) / this.pagination.limit }}
-        </button>
-        </li>
-      </ul>
-    </nav>
+    <div class="level">
+      <div class="level-left">
+        <nav class="pagination is-centered" role="navigation" aria-label="paginação">
+          <button class="pagination-previous"
+            (click)="this.pagination.offset = pagination.offset - this.pagination.limit; getRatings()"
+            [disabled]="pagination.offset === 0">
+            <span class="icon">
+              <i class="fas fa-chevron-left"></i>
+            </span>
+            <span>
+              Anterior
+            </span>
+          </button>
+          <button class="pagination-next"
+            (click)="this.pagination.offset = pagination.offset + this.pagination.limit; getRatings()"
+            [disabled]="pagination.total <= pagination.offset + this.pagination.limit">
+            <span>
+              Próxima
+            </span>
+            <span class="icon">
+              <i class="fas fa-chevron-right"></i>
+            </span>
+          </button>
+          <ul class="pagination-list">
+            <li *ngFor="let n of numPages(); let i = index;">
+              <button class="pagination-link is-current"
+                (click)="this.pagination.offset = i * this.pagination.limit; getRatings()"
+                [attr.aria-label]="'Página ' + ((pagination.offset + this.pagination.limit) / this.pagination.limit)"
+                aria-current="página">
+                Página {{ i+1 }}
+              </button>
+            </li>
+          </ul>
+        </nav>
+      </div>
+      <div class="level-right">
+        <div class="field">
+          <label for="perPage">Avaliações por página</label>
+          <div class="control select">
+            <select (change)="getRatingsPerPage()" [(ngModel)]="this.pagination.limit" class="input" name="perPage"
+              [disabled]="pagination.total == 0" id="perPage">
+              <option value="8">8</option>
+              <option value="16">16</option>
+              <option value="32">32</option>
+              <option value="64">64</option>
+            </select>
+          </div>
+        </div>
+      </div>
+    </div>
   </div>
 </section>
