--- a/src/app/pages/signup/signup.component.html
+++ b/src/app/pages/signup/signup.component.html
@@ -8,30 +8,32 @@
             <p class="subtitle has-text-dark">
               Insira seus dados para cadastrar sua conta
             </p>
-            <form (submit)="signup()" ngNativeValidate>
+            <form [formGroup]="formulario" (submit)="signup()">
               <div class="field">
                 <label for="name">Nome</label>
                 <div class="control">
-                  <input type="text" class="input" name="name" id="name" required [(ngModel)]="register.name">
+                  <input type="text" class="input" formControlName="name" id="name">
+                  <small *ngIf="submitted && formulario.controls.name?.errors">Nome obrigatório</small>
                 </div>
               </div>
               <div class="field">
                 <label for="email">E-mail</label>
                 <div class="control">
-                  <input type="email" class="input" autocomplete="email" name="email" id="email" required [(ngModel)]="register.email">
+                  <input type="email" class="input" autocomplete="email" formControlName="email" id="email">
+                  <small *ngIf="submitted && formulario.controls.email?.errors">E-mail inválido</small>
                 </div>
               </div>
               <div class="field">
                 <label for="phone">Celular <small>(opcional)</small></label>
                 <div class="control">
-                  <input type="tel" class="input" name="phone" id="phone" [(ngModel)]="register.phone">
+                  <input type="tel" class="input" formControlName="phone" id="phone">
                 </div>
               </div>
               <div class="field">
                 <label for="deficiency">Deficiência</label>
                 <div class="control">
                   <div class="select is-fullwidth">
-                    <select class="input" name="deficiency" id="deficiency" [(ngModel)]="register.deficiency">
+                    <select class="input" formControlName="deficiency" id="deficiency">
                       <option value="">Selecione...</option>
                       <option value="Física">Física</option>
                       <option value="Auditiva">Auditiva</option>
@@ -41,17 +43,27 @@
                       <option value="Nenhuma">Nenhuma</option>
                     </select>
                   </div>
+                  <small *ngIf="submitted && formulario.controls.deficiency?.errors">Selecione uma das opções</small>
                 </div>
               </div>
               <div class="field">
                 <label for="password">Senha</label>
                 <div class="control">
-                  <input type="password" class="input" autocomplete="new-password" name="password" id="password" required [(ngModel)]="register.password">
+                  <input type="password" class="input" autocomplete="new-password" formControlName="password" id="password">
+                  <small *ngIf="submitted && formulario.controls.password?.errors">Senha inválida</small>
+                </div>
+              </div>
+              <div class="field">
+                <label for="password">Confirmar Senha</label>
+                <div class="control">
+                  <input type="password" class="input" autocomplete="new-password" formControlName="password_confirm" id="password_confirm">
+                  <small *ngIf="submitted && formulario.controls.password_confirm?.errors">Confirmação de senha obrigatória</small>
+                  <small *ngIf="submitted && formulario.get('password_confirm').value !== formulario.get('password').value">As senhas devem ser iguais</small>
                 </div>
               </div>
               <br>
               <div class="field">
-                <button type="submit" class="button is-fullwidth is-primary">Cadastrar</button>
+                <button type="submit" class="button is-fullwidth is-primary" [disabled]="!!formulario.get('password_confirm').value && formulario.get('password_confirm').value !== formulario.get('password').value">Cadastrar</button>
               </div>
               <br>
               <div class="has-text-centered">
