--- a/src/app/pages/admin/admin-users/admin-users.component.html
+++ b/src/app/pages/admin/admin-users/admin-users.component.html
@@ -12,6 +12,51 @@
 </section>
 <section class="section">
   <div class="container">
+    <div class="box over-top-box">
+      <h3 class="title is-5">Buscar</h3>
+      <div class="columns is-multiline">
+        <div class="column is-3">
+          <div class="field">
+            <label for="usuario">Nome</label>
+            <div class="control">
+              <input [(ngModel)]="filter.name" class="input" type="text" id="usuario" name="usuario">
+            </div>
+          </div>
+        </div>
+        <div class="column is-3">
+          <div class="field">
+            <label for="usuario">E-mail</label>
+            <div class="control">
+              <input [(ngModel)]="filter.email" class="input" type="text" id="usuario" name="usuario">
+            </div>
+          </div>
+        </div>        
+        <div class="column is-2">
+          <div class="field">
+            <label for="type">Tipo</label>
+            <div class="control">
+              <div class="select">
+                <select [(ngModel)]="filter.role" class="input" name="role" id="role">
+                  <option value="">Selecione...</option>
+                  <option value="administrator">administrator</option>
+                  <option value="user">user</option>
+                </select>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="column is-12">
+          <div class="buttons is-right">
+            <button class="button is-light" type="button" (click)="cleanFiltersAndSearch()">
+              Limpar
+            </button>
+            <button class="button is-link" type="button" (click)="pagination.offset = 0; getUsers()">
+              Buscar
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>    
     <p *ngIf="users.length === 0" class="has-text-grey has-text-centered">Não encontramos nenhum resultado.</p>
     <table class="table is-fullwidth is-striped" *ngIf="users.length > 0">
       <tr>
