Incluir o nome do estabelecimento na mensagem de confirmação da exclusão da avaliação
Melhora a mensagem de confirmacao

--- a/src/app/pages/admin/admin-places/admin-places.component.html
+++ b/src/app/pages/admin/admin-places/admin-places.component.html
@@ -237,11 +237,11 @@
               <div class="modal-background"></div>
               <div class="modal-card">
                 <header class="modal-card-head">
-                  <p class="modal-card-title"></p>
+                  <p class="modal-card-title">Confirma a exclusão do estabelecimento ?</p>
                   <button (click)="closeModal(place.id)" class="delete" aria-label="close"></button>
                 </header>
                 <section class="modal-card-body">
-                  Tem certeza que deseja excluir este estabelecimento?
+                  {{ place.title }}
                 </section>
                 <footer class="modal-card-foot">
                   <button (click)="deletePlace(place.id, index)" class="button is-success">Sim</button>
