--- a/src/app/pages/admin/admin-ratings/admin-ratings.component.html
+++ b/src/app/pages/admin/admin-ratings/admin-ratings.component.html
@@ -106,11 +106,11 @@
               <div class="modal-background"></div>
               <div class="modal-card">
                 <header class="modal-card-head">
-                  <p class="modal-card-title"></p>
+                  <p class="modal-card-title">Confirma a exclusão da avaliação ?</p>
                   <button (click)="closeModal(rating._id)" class="delete" aria-label="close"></button>
                 </header>
                 <section class="modal-card-body">
-                  Tem certeza que deseja excluir esta avaliação?
+                  {{ rating.title }}
                 </section>
                 <footer class="modal-card-foot">
                   <button (click)="deleteRating(rating._id, index)" class="button is-success">Sim</button>
